<resources>
    <string name="app_name">亿商通</string>
    <string name="username">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_out">退出登陆</string>
    <string name="login_cancel">退出</string>
    <string name="please_login">请登录</string>
    <string name="message">消息</string>
    <string name="team">团队</string>
    <string name="shop">商户通</string>
    <string name="sale">收银</string>
    <string name="personal">我的</string>
    <string name="home_search_hint">"  输入你想要的内容"</string>
    <string name="course_name">%1$s第%2$d次课</string>
    <!--网络相关-->
    <string name="request_timeout">请求超时，请稍后再试...</string>
    <string name="request_fail">请求失败，请稍后再试...</string>
    <string name="server_exception">服务器未知异常</string>
    <string name="network_exception">网络异常，请检查网络状态!</string>
    <string name="network_timeout">亲，你的网络状态信号不稳定哦</string>

    <string name="user_pwd">请输入密码</string>
    <string name="confirm_pwd">请确认密码</string>
    <string name="input_verify_code_desc">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="input_phone_num">请输手机号码</string>

    <string name="permission_storage">Storage</string>
    <string name="permission_location">Location</string>
    <string name="permission_camera">Camera</string>
    <string name="permission_dialog_title">Start %s</string>
    <string name="permission_dialog_msg">For your normal use %s, you need the following permissions</string>
    <string name="permission_title">Please allow access to %s</string>
    <string name="permission_denied">We need access to %1$s,otherwise, you will not be able to use %2$s</string>
    <string name="permission_denied_with_naac">"Because %1$s cannot use %2$s,Can not run normally,Please open permissions before using.\n\nSetup path: Apps->%3$s->Permissions"</string>
    <string name="permission_cancel">Cancel</string>
    <string name="permission_ensure">Enter</string>
    <string name="permission_reject">Deny</string>
    <string name="permission_btn_next">Next</string>
    <string name="permission_go_to_setting">Go to Setting</string>
</resources>
