<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_ten"
    android:orientation="vertical"
    android:background="@color/hal_transparent_white">

    <com.by.wind.widget.MyEditText
        android:id="@+id/username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:hint="@string/username"
        android:textColor="@color/black_333"
        android:textColorHint="@color/black"
        android:textSize="20sp"/>

    <com.by.wind.widget.MyEditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_weight="1"
            android:background="@color/btn_red"
            android:text="@string/login_cancel" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="67dp"
            android:background="#1E88E5"
            android:text="@string/login" />
    </LinearLayout>
</LinearLayout>
